--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<html dir="rtl"><head></head><body>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-
-	<!-- CREATED BY Matan Mizrachi / while1.co.il -->
+<html dir="rtl"><head></head><body><!-- CREATED BY Matan Mizrachi / while1.co.il -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	
